@@ -98,8 +98,8 @@ DEFAULT_DEFAULT_BATCH_SIZE = getEnvInt('ITP_DEFAULT_BATCH_SIZE', 20)
 DEFAULT_OUTLOOK_BATCH_SIZE = getEnvInt('ITP_OUTLOOK_BATCH_SIZE', 10)
 DEFAULT_ALLOW_SHOW_ALL = True
 DEFAULT_ISSUEPREFIX = ''
-DEFAULT_NO_FILEATTACHMENTS = getEnvInt('ITP_NO_FILEATTACHMENTS', 2)
-DEFAULT_NO_FOLLOWUP_FILEATTACHMENTS = getEnvInt('ITP_NO_FOLLOWUP_FILEATTACHMENTS', 2)
+DEFAULT_NO_FILEATTACHMENTS = getEnvInt('ITP_NO_FILEATTACHMENTS', 3)
+DEFAULT_NO_FOLLOWUP_FILEATTACHMENTS = getEnvInt('ITP_NO_FOLLOWUP_FILEATTACHMENTS', 3)
 DEFAULT_STATUSES = (_('open'),_('taken'),_('on hold'),_('rejected'),_('completed'))
 DEFAULT_STATUSES_VERBS = (_('open'),_('take'),_('put on hold'),_('reject'),_('complete'))
 DEFAULT_DISPLAY_FORMATS = ('plaintext','structuredtext')
