@@ -35,23 +35,6 @@ startautosave=function() {
 };
 </dtml-if>
 
-function bigup(){
- var t=$.id('description_text');t.cols=80;t.rows=20;
- var s=$.id('tsizer');s.innerHTML='<a href="#" onclick="smalldown();return false">&ndash; smaller<'+'/a>';
-}
-function smalldown(){
-  var t=$.id('description_text');t.cols=60;t.rows=10;
-  var s=$.id('tsizer');
-  s.innerHTML='<a href="#" onclick="bigup();return false">+bigger<'+'/a>';
-}
-
-var enabled_tsizer=false;
-function enableTsizer(){
-  var s=$.id('tsizer');
-  s.innerHTML='<a href="#" onclick="bigup();return false">+bigger<'+'/a>';
-  enabled_tsizer=true;
-}
-
 function deldraft(draftid) {
    $('p.draft-'+draftid).remove();
    $.post('DeleteDraftIssue', {id:draftid, return_show_drafts_simple:1}, function(resp) {
