@@ -2,12 +2,17 @@ $.id=function(id){return document.getElementById(id)};function stripSpaces(x){re
 function econvert(s){return s.replace(/%7E/g,'~').replace(/%28/g,'(').replace(/%29/g,')').replace(/%20/g,' ').replace(/_dot_| dot |_\._|\(\.\)/gi, '.').replace(/_at_|~at~/gi, '@');}
 function _getNoLines(element){var hardlines=element.value.split('\n');var total=hardlines.length;for(var i=0, len=hardlines.length;i<len; i++){total+=Math.max(Math.round(hardlines[i].length / element.cols), 1) - 1;}
 return total;}
+function hideFileAttachments(){$('tr.fileattachment').hide();$('tr.fileattachment-tip').show();} 
+function showFileAttachments(){$('tr.fileattachment-tip').hide();$('tr.fileattachment').show();}  
 $(function(){$("a.aeh").each(function() {this.href=econvert(this.href);this.innerHTML=econvert(this.innerHTML);});
 $("span.aeh").each(function(){this.innerHTML=econvert(this.innerHTML);});
 $('textarea.autoexpanding').each(function(){if(_getNoLines(this) > parseInt(this.rows))
 this.rows = '' + Math.min(_getNoLines(this) + 2,50);});
 $('textarea.autoexpanding').bind('keyup', function(){if(_getNoLines(this) > parseInt(this.rows))
-this.rows = '' + Math.min(_getNoLines(this) + 2,50);});});function G(p){location.href=p;}
+this.rows = '' + Math.min(_getNoLines(this) + 2,50);});if(!($('tr.fileattachment-error').size() || $('tr.fileattachment input[type="checkbox"]').size())){hideFileAttachments();}else{$('tr.fileattachment a.fileattachment-tip').hide();}
+$('input[type="file"]').change(function(){if(this.value)
+$('tr.fileattachment a.fileattachment-tip').hide();else
+$('tr.fileattachment a.fileattachment-tip:hidden').show();});});function G(p){location.href=p;}
 function checkCaptchaValue(elm,msg,maxlength){var v = $.trim(elm.value);if(v){if(v.search(/\D/)>-1)
 alert(msg);v=v.replace(/\D/g,'');if(v.length >= maxlength) 
 v=v.substring(0,maxlength);}
