@@ -53,7 +53,7 @@
   
   </div> 
 
-  <form action="#i" method="post"
+  <form action="#i" method="post" 
   tal:define="change python:user.has_permission('Change Issue Tracker Issues', here) and not show_many and here.AllowIssueAttributeChange() and request.get('change')=='Details'"
   tal:attributes="method python:test(change, 'post','get')"
   >
@@ -163,8 +163,6 @@
   </table>
   </form>
   
-<!-- <div class="clearerR">&nbsp;</div>-->
-
   </div>
 
 
@@ -183,12 +181,15 @@
     <tal:block define="is_end repeat/assignment/end"
      tal:condition="python:is_end and here.hasManagerRole()">
      
-     <form action="changeAssignment" tal:define="all_users python:here.getAllIssueUsers(exclude_assignee=assignment.getACLAssignee())" method="post" name="changeassignment" 
-                                     tal:condition="python:all_users and not show_many">
+     <form action="changeAssignment" tal:define="all_users python:here.getAllIssueUsers(exclude_assignee=assignment.getACLAssignee())" method="post" name="changeassignment"
+                                     tal:condition="python:all_users and not show_many"
+                                     >
 	<select name="assignee" style="color:#666" id="assignee"
          tal:define="issueuser here/getIssueUser;selected python:request.get('assignee','');
-                     youare python:here.getWhoYouAre(issueuser)" tabindex="30" onfocus="showAssignmentForm()" onblur="if(!this.options[this.selectedIndex].value){hideAssignmentForm()}"
-             onchange="if(!this.options[this.selectedIndex].value){hideAssignmentForm()}else{showAssignmentForm()}">
+                     youare python:here.getWhoYouAre(issueuser)" tabindex="30" 
+                     onfocus="showAssignmentForm()" 
+                     onblur="if(!this.options[this.selectedIndex].value){hideAssignmentForm()}"
+                     onchange="if(!this.options[this.selectedIndex].value){hideAssignmentForm()}else{showAssignmentForm()}">
              <option value="" style="color:#666">Change assignment...</option>
 				<option tal:repeat="user all_users" style="color:#000"
                  tal:attributes="value python:user['identifier']; selected python:user['identifier']==selected"
@@ -208,20 +209,27 @@
     
      <form action="setAssignment" 
            tal:define="all_users python:here.getAllIssueUsers()" method="post" name="setassignment"
-           tal:condition="python:all_users and not show_many">
-	<select name="assignee" style="color:#666"
+           tal:condition="python:all_users and not show_many"
+           >
+	<select name="assignee" style="color:#666" id="assignee"
          tal:define="issueuser here/getIssueUser;
                      selected python:request.get('assignee','');
                      youare python:here.getWhoYouAre(issueuser)" tabindex="30"
-             tal:attributes="onchange string:if(this.options[this.selectedIndex].value){location.href='setAssignment?assignee='+this.options[this.selectedIndex].value+'&send_email='+document.setassignment.send_email.checked}">
+                onfocus="showAssignmentForm()" 
+                onblur="if(!this.options[this.selectedIndex].value){hideAssignmentForm()}"
+                onchange="if(!this.options[this.selectedIndex].value){hideAssignmentForm()}else{showAssignmentForm()}">
              <option value="" style="color:#666">Assign to...</option>
 				<option tal:repeat="user all_users" style="color:#000"
                  tal:attributes="value python:user['identifier']; selected python:user['identifier']==selected"
                  tal:content="python:user['user'].getFullname()">
 				Statuses</option>
 	</select>
-        <input type="checkbox" name="send_email" checked="checked" value="1" />Send notification to new assignee
-        <noscript><input type="submit" value="Set" /></noscript>
+        <div id="assignment-form-rest" style="display:none">
+        <input type="checkbox" name="send_email" id="send_email" checked="checked" value="1" /><label for="send_email">Send notification to new assignee</label>
+	<input type="submit" value="Change" />
+	<input type="button" class="smallbutton" value="Cancel" onclick="hideAssignmentForm();$('#assignee')[0].selectedIndex=0" />
+        </div>
+
       </form>
       
     </tal:block>
